group 'com.group3'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'war'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    compile group: 'javax', name: 'javaee-api', version: '8.0'
    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0.1'
    compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.26'
    compile group: 'org.glassfish.jersey', name: 'jersey-bom', version: '2.26'
    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.26'
    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.26'
    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.6.Final'
    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.47'
    compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
    compile group: 'com.auth0', name: 'java-jwt', version: '3.4.0'

    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.1'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
    testCompile group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '4.12.0'
    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
}

test {
    useJUnitPlatform {
        includeEngines 'junit-jupiter', 'junit-vintage'
    }
    testLogging {
        events "passed", "skipped", "failed"
    }
}